--- a/environment.yml
+++ b/environment.yml
@@ -1,287 +1,307 @@
-name: bestsecret
+name: best_secret
 channels:
-  - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_kmp_llvm
+  - _tflow_select=2.2.0=eigen
+  - abseil-cpp=20211102.0=hc377ac9_0
+  - absl-py=1.4.0=py310hca03da5_0
+  - aiohttp=3.9.3=py310h80987f9_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - altair=5.0.1=py310hca03da5_0
+  - anyio=4.2.0=py310hca03da5_0
+  - appnope=0.1.2=py310hca03da5_1001
   - argon2-cffi=21.3.0=pyhd3eb1b0_0
+  - argon2-cffi-bindings=21.2.0=py310h1a28f6b_0
+  - arrow-cpp=11.0.0=py310h1fc3239_0
   - asttokens=2.0.5=pyhd3eb1b0_0
-  - atk-1.0=2.36.0=ha1a6a79_0
-  - blas=1.0=mkl
+  - astunparse=1.6.3=py_0
+  - async-lru=2.0.4=py310hca03da5_0
+  - async-timeout=4.0.3=py310hca03da5_0
+  - attrs=23.1.0=py310hca03da5_0
+  - aws-c-common=0.6.8=h80987f9_1
+  - aws-c-event-stream=0.1.6=h313beb8_6
+  - aws-checksums=0.1.11=h80987f9_2
+  - aws-sdk-cpp=1.8.185=h4a942e0_0
+  - babel=2.11.0=py310hca03da5_0
+  - beautifulsoup4=4.12.2=py310hca03da5_0
+  - blas=2.116=openblas
+  - blas-devel=3.9.0=16_osxarm64_openblas
   - bleach=4.1.0=pyhd3eb1b0_0
-  - boost-cpp=1.82.0=hdb19cb5_2
-  - brotli-bin=1.0.9=h5eee18b_7
-  - brotli-python=1.0.9=py311h6a678d5_7
-  - bzip2=1.0.8=h7b6447c_0
-  - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2023.12.12=h06a4308_0
-  - cairo=1.16.0=hb05425b_5
+  - blinker=1.6.2=py310hca03da5_0
+  - boost-cpp=1.73.0=h1a28f6b_12
+  - bottleneck=1.3.5=py310h96f19d2_0
+  - brotli=1.0.9=h1a28f6b_7
+  - brotli-bin=1.0.9=h1a28f6b_7
+  - bzip2=1.0.8=h620ffc9_4
+  - c-ares=1.19.1=h80987f9_0
+  - ca-certificates=2023.12.12=hca03da5_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
+  - cairo=1.16.0=h29d4eff_2
+  - certifi=2024.2.2=py310hca03da5_0
+  - cffi=1.16.0=py310h80987f9_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.1.7=py310hca03da5_0
+  - comm=0.1.2=py310hca03da5_0
+  - contourpy=1.2.0=py310h48ca7d4_0
+  - cryptography=41.0.3=py310h3c57c4d_0
   - cycler=0.11.0=pyhd3eb1b0_0
-  - cyrus-sasl=2.1.28=h52b45da_1
-  - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.6.7=py310h313beb8_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
+  - eigen=3.4.0=hc021e02_0
+  - exceptiongroup=1.2.0=py310hca03da5_0
   - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.5.0=h6a678d5_0
-  - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
-  - font-ttf-inconsolata=2.001=hcb22688_0
-  - font-ttf-source-code-pro=2.030=hd3eb1b0_0
-  - font-ttf-ubuntu=0.83=h8b1ccd4_0
-  - fontconfig=2.14.1=h4c34cd2_2
-  - fonts-anaconda=1=h8fa9717_0
-  - fonts-conda-ecosystem=1=hd3eb1b0_0
+  - ffmpeg=4.2.2=h04105a8_0
+  - flatbuffers=2.0.0=hc377ac9_0
+  - fontconfig=2.13.94=heb65262_0
   - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.12.1=h4a9f257_0
-  - fribidi=1.0.10=h7b6447c_0
-  - gdk-pixbuf=2.42.10=h5eee18b_0
-  - giflib=5.2.1=h5eee18b_3
-  - glib=2.69.1=he621ea3_2
-  - gobject-introspection=1.72.0=py311hbb6d50b_2
-  - graphite2=1.3.14=h295c915_1
-  - graphviz=2.50.0=h1b29801_1
-  - gst-plugins-base=1.14.1=h6a678d5_1
-  - gstreamer=1.14.1=h5eee18b_1
-  - gtk2=2.24.33=h73c1081_2
-  - gts=0.7.6=hb67d8dd_3
-  - harfbuzz=4.3.0=hf52aaf7_2
-  - icu=73.1=h6a678d5_0
-  - importlib_metadata=7.0.1=hd3eb1b0_0
-  - importlib_resources=6.1.1=py311h06a4308_1
-  - intel-openmp=2023.1.0=hdb19cb5_46306
-  - jpeg=9e=h5eee18b_1
+  - freetype=2.12.1=h1192e45_0
+  - frozenlist=1.4.0=py310h80987f9_0
+  - gast=0.4.0=pyhd3eb1b0_0
+  - gettext=0.21.0=h13f89a0_1
+  - gflags=2.2.2=h313beb8_1
+  - giflib=5.2.1=h80987f9_3
+  - gitdb=4.0.7=pyhd3eb1b0_0
+  - gitpython=3.1.37=py310hca03da5_0
+  - glib=2.69.1=h514c7bf_2
+  - glog=0.5.0=h313beb8_1
+  - gmp=6.2.1=hc377ac9_3
+  - gnutls=3.6.15=h887c41c_0
+  - google-auth=2.6.0=pyhd3eb1b0_0
+  - google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
+  - google-pasta=0.2.0=pyhd3eb1b0_0
+  - graphite2=1.3.14=hc377ac9_1
+  - grpc-cpp=1.46.1=h8e4afa7_1
+  - grpcio=1.42.0=py310h95c9599_0
+  - gst-plugins-base=1.14.1=h313beb8_1
+  - gstreamer=1.14.1=h80987f9_1
+  - h5py=3.9.0=py310haafd478_0
+  - harfbuzz=4.3.0=he9eebac_1
+  - hdf5=1.12.1=h160e8cb_2
+  - icu=68.1=hc377ac9_0
+  - idna=3.4=py310hca03da5_0
+  - importlib-metadata=7.0.1=py310hca03da5_0
+  - ipykernel=6.28.0=py310hca03da5_0
+  - ipython=8.20.0=py310hca03da5_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - ipywidgets=7.6.5=pyhd3eb1b0_2
+  - jedi=0.18.1=py310hca03da5_1
+  - jinja2=3.1.3=py310hca03da5_0
+  - joblib=1.3.2=pyhd8ed1ab_0
+  - jpeg=9e=h80987f9_1
   - json5=0.9.6=pyhd3eb1b0_0
-  - jupyter_client=8.6.0=py311h06a4308_0
-  - jupyter_core=5.5.0=py311h06a4308_0
-  - jupyter_events=0.8.0=py311h06a4308_0
-  - jupyter_server=2.10.0=py311h06a4308_0
-  - jupyter_server_terminals=0.4.4=py311h06a4308_1
-  - jupyterlab=4.0.11=pyhd8ed1ab_0
+  - jsonschema=4.19.2=py310hca03da5_0
+  - jsonschema-specifications=2023.7.1=py310hca03da5_0
+  - jupyter-lsp=2.2.0=py310hca03da5_0
+  - jupyter_client=8.6.0=py310hca03da5_0
+  - jupyter_core=5.5.0=py310hca03da5_0
+  - jupyter_events=0.8.0=py310hca03da5_0
+  - jupyter_server=2.10.0=py310hca03da5_0
+  - jupyter_server_terminals=0.4.4=py310hca03da5_1
+  - jupyterlab=4.0.11=py310hca03da5_0
   - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=2.25.1=py311h06a4308_0
-  - krb5=1.20.1=h143b758_1
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - lerc=3.0=h295c915_0
-  - libboost=1.82.0=h109eef0_2
-  - libbrotlicommon=1.0.9=h5eee18b_7
-  - libbrotlidec=1.0.9=h5eee18b_7
-  - libbrotlienc=1.0.9=h5eee18b_7
-  - libclang13=14.0.6=default_he11475f_1
-  - libcups=2.4.2=h2d74bed_1
-  - libcurl=8.5.0=h251f7ec_0
-  - libdeflate=1.17=h5eee18b_1
-  - libedit=3.1.20230828=h5eee18b_0
-  - libev=4.33=h7f8727e_1
-  - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=13.2.0=h807b86a_4
-  - libgd=2.3.3=h695aa2c_1
-  - libgfortran-ng=11.2.0=h00389a5_1
-  - libgfortran5=11.2.0=h1234567_1
-  - libiconv=1.16=h7f8727e_2
-  - libllvm14=14.0.6=hdb19cb5_3
-  - libnghttp2=1.57.0=h2d74bed_0
-  - libpng=1.6.39=h5eee18b_0
-  - libpq=12.17=hdbd6064_0
-  - librsvg=2.54.4=h36cc946_3
-  - libsodium=1.0.18=h7b6447c_0
-  - libssh2=1.10.0=hdbd6064_2
-  - libstdcxx-ng=13.2.0=h7e041cc_4
-  - libtiff=4.5.1=h6a678d5_0
-  - libtool=2.4.6=h6a678d5_1009
-  - libuuid=1.41.5=h5eee18b_0
-  - libwebp=1.3.2=h11a3e52_0
-  - libwebp-base=1.3.2=h5eee18b_0
-  - libxcb=1.15=h7f8727e_0
-  - libxkbcommon=1.0.1=h5eee18b_1
-  - libxml2=2.10.4=hf1b16e4_1
-  - libzlib=1.2.13=hd590300_5
-  - llvm-openmp=14.0.6=h9e868ea_0
-  - lz4-c=1.9.4=h6a678d5_0
-  - matplotlib-base=3.8.2=py311h54ef318_0
-  - mkl=2023.1.0=h213fc3f_46344
-  - mkl_fft=1.3.8=py311h5eee18b_0
-  - mkl_random=1.2.4=py311hdb19cb5_0
+  - jupyterlab_server=2.25.1=py310hca03da5_0
+  - jupyterlab_widgets=3.0.9=py310hca03da5_0
+  - keras=2.11.0=py310hca03da5_0
+  - keras-preprocessing=1.1.2=pyhd3eb1b0_0
+  - kiwisolver=1.4.4=py310h313beb8_0
+  - krb5=1.20.1=h8380606_1
+  - lame=3.100=h1a8c8d9_1003
+  - lcms2=2.12=hba8e193_0
+  - lerc=3.0=hc377ac9_0
+  - libblas=3.9.0=16_osxarm64_openblas
+  - libboost=1.73.0=h49e8a49_12
+  - libbrotlicommon=1.0.9=h1a28f6b_7
+  - libbrotlidec=1.0.9=h1a28f6b_7
+  - libbrotlienc=1.0.9=h1a28f6b_7
+  - libcblas=3.9.0=16_osxarm64_openblas
+  - libclang=12.0.0=default_hc321e17_4
+  - libcurl=8.2.1=h0f1d93c_0
+  - libcxx=14.0.6=h848a8c0_0
+  - libdeflate=1.17=h80987f9_1
+  - libedit=3.1.20230828=h80987f9_0
+  - libev=4.33=h1a28f6b_1
+  - libevent=2.1.12=hf27765b_0
+  - libffi=3.4.4=hca03da5_0
+  - libgfortran=5.0.0=11_3_0_hca03da5_28
+  - libgfortran5=11.3.0=h009349e_28
+  - libiconv=1.16=h1a28f6b_2
+  - libidn2=2.3.4=h80987f9_0
+  - liblapack=3.9.0=16_osxarm64_openblas
+  - liblapacke=3.9.0=16_osxarm64_openblas
+  - libllvm12=12.0.1=h93073aa_2
+  - libnghttp2=1.52.0=h10c0552_1
+  - libopenblas=0.3.21=openmp_hc731615_3
+  - libopus=1.3.1=h27ca646_1
+  - libpng=1.6.39=h80987f9_0
+  - libpq=12.15=h449679c_1
+  - libprotobuf=3.20.3=h514c7bf_0
+  - libsodium=1.0.18=h1a28f6b_0
+  - libssh2=1.10.0=h449679c_2
+  - libtasn1=4.19.0=h1a8c8d9_0
+  - libthrift=0.13.0=hd358383_6
+  - libtiff=4.5.1=h313beb8_0
+  - libunistring=0.9.10=h3422bc3_0
+  - libvpx=1.10.0=hc377ac9_0
+  - libwebp=1.3.2=ha3663a8_0
+  - libwebp-base=1.3.2=h80987f9_0
+  - libxml2=2.10.4=h372ba2a_0
+  - libxslt=1.1.37=habca612_0
+  - llvm-openmp=14.0.6=hc6e5704_0
+  - lz4-c=1.9.4=h313beb8_0
+  - markdown=3.4.1=py310hca03da5_0
+  - markdown-it-py=2.2.0=py310hca03da5_1
+  - markupsafe=2.1.3=py310h80987f9_0
+  - matplotlib=3.8.0=py310hca03da5_0
+  - matplotlib-base=3.8.0=py310h46d7db6_0
+  - matplotlib-inline=0.1.6=py310hca03da5_0
+  - mdurl=0.1.0=py310hca03da5_0
+  - mistune=2.0.4=py310hca03da5_0
+  - multidict=6.0.4=py310h80987f9_0
   - munkres=1.1.4=py_0
-  - mysql=5.7.24=h721c034_2
-  - ncurses=6.4=h6a678d5_0
-  - ninja=1.10.2=h06a4308_5
-  - ninja-base=1.10.2=hd09550d_5
-  - nspr=4.35=h6a678d5_0
-  - nss=3.89.1=h6a678d5_0
-  - numpy-base=1.26.3=py311hf175353_0
-  - openjpeg=2.4.0=h3ad879b_0
-  - openssl=3.0.12=h7f8727e_0
+  - nbclient=0.8.0=py310hca03da5_0
+  - nbconvert=7.10.0=py310hca03da5_0
+  - nbformat=5.9.2=py310hca03da5_0
+  - ncurses=6.4=h313beb8_0
+  - nest-asyncio=1.5.6=py310hca03da5_0
+  - nettle=3.7.3=h84b5d62_1
+  - notebook=7.0.6=py310hca03da5_0
+  - notebook-shim=0.2.3=py310hca03da5_0
+  - nspr=4.35=hb7217d7_0
+  - nss=3.89.1=h313beb8_0
+  - numexpr=2.8.7=py310hecc3335_0
+  - numpy=1.26.3=py310h3b2db8e_0
+  - numpy-base=1.26.3=py310ha9811e2_0
+  - oauthlib=3.2.2=py310hca03da5_0
+  - openblas=0.3.21=openmp_hf78f355_3
+  - opencv=4.6.0=py310hc90a7da_5
+  - openh264=1.8.0=h98b2900_0
+  - openjpeg=2.3.0=h7a6adac_2
+  - openssl=1.1.1w=h1a28f6b_0
+  - opt_einsum=3.3.0=pyhd3eb1b0_1
+  - orc=1.7.4=hdca1487_1
+  - overrides=7.4.0=py310hca03da5_0
+  - packaging=23.1=py310hca03da5_0
+  - pandas=2.1.4=py310h46d7db6_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
-  - pango=1.50.7=h05da053_0
   - parso=0.8.3=pyhd3eb1b0_0
-  - pcre=8.45=h295c915_0
+  - pcre=8.45=hbdafb3b_0
   - pexpect=4.8.0=pyhd3eb1b0_3
-  - pixman=0.40.0=h7f8727e_1
-  - poppler=22.12.0=h9614445_3
-  - poppler-data=0.4.11=h06a4308_1
-  - prometheus_client=0.14.1=py311h06a4308_0
+  - pillow=10.2.0=py310h80987f9_0
+  - pip=23.3.1=py310hca03da5_0
+  - pixman=0.40.0=h1a28f6b_0
+  - platformdirs=3.10.0=py310hca03da5_0
+  - prometheus_client=0.14.1=py310hca03da5_0
+  - prompt-toolkit=3.0.43=py310hca03da5_0
   - prompt_toolkit=3.0.43=hd3eb1b0_0
+  - protobuf=3.20.3=py310h313beb8_0
+  - psutil=5.9.0=py310h1a28f6b_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pyarrow=11.0.0=py310hbfed03b_1
+  - pyasn1=0.4.8=pyhd3eb1b0_0
+  - pyasn1-modules=0.2.8=py_0
   - pycparser=2.21=pyhd3eb1b0_0
-  - pydotplus=2.0.2=pyhaef67bd_5
-  - pyqt=5.15.10=py311h6a678d5_0
-  - python=3.11.7=h955ad1f_0
+  - pydeck=0.8.0=py310hca03da5_2
+  - pygments=2.15.1=py310hca03da5_1
+  - pyjwt=2.4.0=py310hca03da5_0
+  - pyopenssl=23.2.0=py310hca03da5_0
+  - pyparsing=3.0.9=py310hca03da5_0
+  - python=3.10.12=hc0d8a6c_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-fastjsonschema=2.16.2=py311h06a4308_0
+  - python-fastjsonschema=2.16.2=py310hca03da5_0
+  - python-flatbuffers=2.0=pyhd3eb1b0_0
+  - python-json-logger=2.0.7=py310hca03da5_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
-  - python_abi=3.11=2_cp311
-  - qt-main=5.15.2=h53bd1ea_10
-  - readline=8.2=h5eee18b_0
+  - pytz=2023.3.post1=py310hca03da5_0
+  - pyyaml=6.0.1=py310h80987f9_0
+  - pyzmq=25.1.2=py310h313beb8_0
+  - qt-main=5.15.2=ha2d02b5_7
+  - qt-webengine=5.15.9=h2903aaf_7
+  - qtwebkit=5.212=h19f419d_5
+  - re2=2022.04.01=hc377ac9_0
+  - readline=8.2=h1a28f6b_0
+  - referencing=0.30.2=py310hca03da5_0
+  - requests=2.31.0=py310hca03da5_1
+  - requests-oauthlib=1.3.0=py_0
+  - rfc3339-validator=0.1.4=py310hca03da5_0
+  - rfc3986-validator=0.1.1=py310hca03da5_0
+  - rich=13.3.5=py310hca03da5_0
+  - rpds-py=0.10.6=py310hf0e4da2_0
+  - rsa=4.7.2=pyhd3eb1b0_1
+  - scikit-learn=1.3.0=py310h46d7db6_1
+  - scipy=1.11.4=py310h20cbe94_0
+  - send2trash=1.8.2=py310hca03da5_0
+  - setuptools=68.2.2=py310hca03da5_0
   - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.41.2=h5eee18b_0
+  - smmap=4.0.0=pyhd3eb1b0_0
+  - snappy=1.1.10=h313beb8_1
+  - sniffio=1.3.0=py310hca03da5_0
+  - soupsieve=2.5=py310hca03da5_0
+  - sqlite=3.41.2=h80987f9_0
   - stack_data=0.2.0=pyhd3eb1b0_0
-  - tbb=2021.8.0=hdb19cb5_0
+  - streamlit=1.31.0=pyhd8ed1ab_1
+  - tenacity=8.2.2=py310hca03da5_0
+  - tensorboard=2.11.0=py310hca03da5_0
+  - tensorboard-data-server=0.6.1=py310ha6e5c4f_0
+  - tensorboard-plugin-wit=1.8.1=py310hca03da5_0
+  - tensorflow=2.11.0=eigen_py310h6363ca7_0
+  - tensorflow-base=2.11.0=eigen_py310h8747ca9_0
+  - tensorflow-estimator=2.11.0=py310hca03da5_0
+  - termcolor=2.1.0=py310hca03da5_0
+  - terminado=0.17.1=py310hca03da5_0
   - threadpoolctl=2.2.0=pyh0d69192_0
-  - tk=8.6.13=noxft_h4845f30_101
-  - typing_extensions=4.9.0=py311h06a4308_1
+  - tinycss2=1.2.1=py310hca03da5_0
+  - tk=8.6.12=hb8d0fd4_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - tomli=2.0.1=py310hca03da5_0
+  - toolz=0.12.0=py310hca03da5_0
+  - tornado=6.3.3=py310h80987f9_0
+  - tqdm=4.65.0=py310h33ce5c2_0
+  - traitlets=5.7.1=py310hca03da5_0
+  - typing-extensions=4.9.0=py310hca03da5_1
+  - typing_extensions=4.9.0=py310hca03da5_1
   - tzdata=2023d=h04d1e81_0
+  - tzlocal=2.1=py310hca03da5_1
+  - urllib3=2.1.0=py310hca03da5_0
+  - utf8proc=2.6.1=h80987f9_1
+  - validators=0.18.2=pyhd3eb1b0_0
+  - watchdog=2.1.6=py310h1a28f6b_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
-  - xz=5.4.5=h5eee18b_0
-  - yaml=0.2.5=h7b6447c_0
-  - zeromq=4.3.5=h6a678d5_0
-  - zlib=1.2.13=hd590300_5
-  - zstd=1.5.5=hc292b87_0
+  - webencodings=0.5.1=py310hca03da5_1
+  - websocket-client=0.58.0=py310hca03da5_4
+  - wheel=0.35.1=pyhd3eb1b0_0
+  - widgetsnbextension=3.5.2=py310hca03da5_1
+  - wrapt=1.14.1=py310h1a28f6b_0
+  - x264=1!152.20180806=h1a28f6b_0
+  - xz=5.4.5=h80987f9_0
+  - yaml=0.2.5=h1a28f6b_0
+  - yarl=1.9.3=py310h80987f9_0
+  - zeromq=4.3.5=h313beb8_0
+  - zipp=3.17.0=py310hca03da5_0
+  - zlib=1.2.13=h5a0b063_0
+  - zstd=1.5.5=hd90d995_0
   - pip:
-    - absl-py==2.1.0
-    - anyio==4.2.0
-    - argon2-cffi-bindings==21.2.0
-    - astunparse==1.6.3
-    - async-lru==2.0.4
-    - attrs==23.1.0
-    - babel==2.11.0
-    - beautifulsoup4==4.12.2
-    - bottleneck==1.3.5
-    - brotli==1.0.9
-    - cachetools==5.3.2
-    - certifi==2023.11.17
-    - cffi==1.16.0
-    - comm==0.1.2
-    - contourpy==1.2.0
-    - cryptography==41.0.7
-    - debugpy==1.6.7
-    - fastjsonschema==2.16.2
-    - flatbuffers==23.5.26
-    - gast==0.5.4
-    - google-auth==2.27.0
-    - google-auth-oauthlib==1.2.0
-    - google-pasta==0.2.0
-    - grpcio==1.60.0
-    - h5py==3.10.0
-    - idna==3.4
-    - importlib-metadata==7.0.1
-    - importlib-resources==6.1.1
-    - ipykernel==6.28.0
-    - ipython==8.20.0
-    - jedi==0.18.1
-    - jinja2==3.1.2
-    - joblib==1.2.0
-    - jsonschema==4.19.2
-    - jsonschema-specifications==2023.7.1
-    - jupyter-client==8.6.0
-    - jupyter-core==5.5.0
-    - jupyter-events==0.8.0
-    - jupyter-lsp==2.2.0
-    - jupyter-server==2.10.0
-    - jupyter-server-terminals==0.4.4
-    - jupyterlab-server==2.25.1
-    - keras==2.15.0
-    - kiwisolver==1.4.4
-    - libclang==16.0.6
-    - markdown==3.5.2
-    - markupsafe==2.1.3
-    - matplotlib==3.8.2
-    - matplotlib-inline==0.1.6
-    - mistune==2.0.4
-    - mkl-fft==1.3.8
-    - mkl-random==1.2.4
-    - mkl-service==2.4.0
-    - ml-dtypes==0.2.0
-    - nbclient==0.8.0
-    - nbconvert==7.10.0
-    - nbformat==5.9.2
-    - nest-asyncio==1.5.6
-    - notebook-shim==0.2.3
-    - numexpr==2.8.7
-    - numpy==1.26.3
-    - nvidia-cublas-cu12==12.2.5.6
-    - nvidia-cuda-cupti-cu12==12.2.142
-    - nvidia-cuda-nvcc-cu12==12.2.140
-    - nvidia-cuda-nvrtc-cu12==12.2.140
-    - nvidia-cuda-runtime-cu12==12.2.140
-    - nvidia-cudnn-cu12==8.9.4.25
-    - nvidia-cufft-cu12==11.0.8.103
-    - nvidia-curand-cu12==10.3.3.141
-    - nvidia-cusolver-cu12==11.5.2.141
-    - nvidia-cusparse-cu12==12.1.2.141
-    - nvidia-nccl-cu12==2.16.5
-    - nvidia-nvjitlink-cu12==12.2.140
-    - oauthlib==3.2.2
-    - opt-einsum==3.3.0
-    - overrides==7.4.0
-    - packaging==23.1
-    - pandas==2.1.4
-    - pillow==10.0.1
-    - pip==23.3.1
-    - platformdirs==3.10.0
-    - ply==3.11
-    - prometheus-client==0.14.1
-    - prompt-toolkit==3.0.43
-    - protobuf==4.23.4
-    - psutil==5.9.0
-    - pyasn1==0.5.1
-    - pyasn1-modules==0.3.0
-    - pydot==2.0.0
-    - pygments==2.15.1
-    - pyopenssl==23.2.0
-    - pyparsing==3.0.9
-    - pyqt5==5.15.10
-    - pyqt5-sip==12.13.0
-    - pysocks==1.7.1
-    - python-json-logger==2.0.7
-    - pytz==2023.3.post1
-    - pyyaml==6.0.1
-    - pyzmq==25.1.2
-    - referencing==0.30.2
-    - requests==2.31.0
-    - requests-oauthlib==1.3.1
-    - rfc3339-validator==0.1.4
-    - rfc3986-validator==0.1.1
-    - rpds-py==0.10.6
-    - rsa==4.9
-    - scikit-learn==1.2.2
-    - scipy==1.11.4
-    - seaborn==0.12.2
-    - send2trash==1.8.2
-    - setuptools==68.2.2
-    - sip==6.7.12
-    - sniffio==1.3.0
-    - soupsieve==2.5
-    - tensorboard==2.15.1
-    - tensorboard-data-server==0.7.2
-    - tensorflow==2.15.0.post1
-    - tensorflow-estimator==2.15.0
-    - tensorflow-io-gcs-filesystem==0.35.0
-    - termcolor==2.4.0
-    - terminado==0.17.1
-    - tinycss2==1.2.1
-    - tomli==2.0.1
-    - tornado==6.3.3
-    - traitlets==5.7.1
-    - typing-extensions==4.9.0
-    - urllib3==1.26.18
-    - webencodings==0.5.1
-    - websocket-client==0.58.0
-    - werkzeug==3.0.1
-    - wheel==0.41.2
-    - wrapt==1.14.1
-    - zipp==3.17.0
-prefix: /home/constructor_ds/.conda/envs/bestsecret
+      - alembic==1.13.1
+      - aniso8601==9.0.1
+      - cloudpickle==3.0.0
+      - docker==7.0.0
+      - entrypoints==0.4
+      - filelock==3.13.3
+      - flask==3.0.2
+      - gdown==5.1.0
+      - graphene==3.3
+      - graphql-core==3.2.3
+      - graphql-relay==3.2.0
+      - gunicorn==21.2.0
+      - itsdangerous==2.1.2
+      - mako==1.3.2
+      - mlflow==2.11.3
+      - pysocks==1.7.1
+      - querystring-parser==1.2.4
+      - sqlalchemy==2.0.29
+      - sqlparse==0.4.4
+      - tf-explain==0.3.1
+      - werkzeug==3.0.1
+prefix: /Applications/anaconda3/envs/best_secret
