--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-matplotlib
-tensorflow
 opencv-python-headless
-scikit-learn
-streamlit
-requests
-s3fs
-st-files-connection
-boto3
+streamlit==1.31.0
+numpy==1.26.3
+pandas==2.1.4
+boto3==1.34.78 
+tensorflow==2.11.0
+keras==2.11.0
